--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@
  .box1 h1{
    margin-left: 350px; 
   align-items: center;
-  margin-top: 10px;
+  margin-top: 80px;
   font-family:cursive;
  
  }
@@ -183,41 +183,47 @@
   
    position:absolute;
    border-radius: 28px;
+   place-items: center;
+   display: grid;
    height: 100%;
    background-color:rgb(239, 100, 209);
-   animation: progress-animation 20s forwards;
+   /*animation: progress-animation 20s forwards;*/
+      transition: width .20s ease;
+
+
  }
- .loadingBar::before{
+ /*.loadingBar::before{
    content: attr(data-label);
    display: flex;
    align-items:center;
+    
    position: absolute;
    left: .7em;
    top: .5em;
    bottom: .5em;
    font-family: cursive;
    font-weight: 100;
- }
+ }*/
  
- @keyframes progress-animation{
+ /*@keyframes progress-animation{
   0%{width: 0%;}
   100%{width: 100%;}
- }
+ }*/
   .textSliding {
-    width: 300px; /* Width of one sentence */
-    height: 50px;
-    overflow: hidden;
+    width: 300px;  
+    height:50px;
+    overflow:hidden;
     
-    background: #fff;
+    background:#fff;
     font-family:monospace;
-    font-size: 18px;
-    position: relative;
+    font-size:18px;
+    position:relative;
   }
 
   .inner {
     display: flex;
     width: calc(300px * 10); /* 11 items * width */
-    animation: slideHorizontal 30s steps(11) infinite;
+    animation: slideHorizontal 40s steps(11) infinite;
   }
 
   .classT {
@@ -245,6 +251,35 @@
     height: 200px;
     border-radius: 30px;
     margin-top: 80px;
-    margin-left: 280px;
-
+    margin-left: 290px;
+    color: #f54dd6;
   }
+
+
+  #Next1:hover{
+    cursor: pointer;
+    color: rgb(243, 199, 236);
+  }
+
+#card-item3 h4{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 220px;
+  font-family: cursive;
+  color:#f54dd6;
+  font-size: 30px;
+}
+.pop-up{
+  display: none;
+
+}
+#pop-up #Next1{
+  display: block;
+   
+    margin-left: 370px;
+}
+
+#refuse{
+  display:none;
+}
