--- a/style.css
+++ b/style.css
@@ -43,8 +43,8 @@
  .box0 h2{
   margin-top: 12px;
   font-size:20px;
-  margin-left: 15px;
-  font-family:cursive
+  margin-left: 12px;
+  font-family:cursive;
 
  }
 .box1{
